--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ node_modules/
 *.log
 *.sql
 *.sqlite
+YouTube By Click is a simple, easy-to-use and powerful tool developed to simplifies possible of downloading videos and music from popular websites icluding YouTube, Facebook, Vimeo, Dailymotion, and more.
+
+<a href="https://freelicensekey.org/youtube-by-click-crack-serial-number/">YouTube By Click</a>
+
+https://freelicensekey.org/youtube-by-click-crack-serial-number/
